--- a/Html/SK-0A01/V-1.0/Index.html
+++ b/Html/SK-0A01/V-1.0/Index.html
@@ -16,7 +16,7 @@
 <meta name="title" content="404" />
 <meta name="description" content="404 page... power by Samson Kiran" />                         
 <meta name="keywords" content="SAMSON KIRAN,samson kiran,Samson Kiran,Samson,Kiran,SK,sk,Sk,404,error"/>
-<meta name="copyright" content="Copyright owner: Samson kiran" />
+<meta name="copyright" content="Samson kiran" />
 <meta name="author" content="Samson kiran" />
 <meta charset="utf-8">
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
