--- a/Html/SK-0A01/V-1.0/Index.html
+++ b/Html/SK-0A01/V-1.0/Index.html
@@ -81,6 +81,18 @@
 
 <title>404</title>
 
+
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-6ZVE5T7QLL"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-6ZVE5T7QLL');
+</script>
+
+
      <!----- meta tag <starts> ----->
 <meta name="title" content="404" />
 <meta name="description" content="404 page... power by Samson Kiran" />                         
