--- a/Html/SK-0A02/V-1.0/Index.html
+++ b/Html/SK-0A02/V-1.0/Index.html
@@ -1,1 +1,13 @@
+  
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-HQKED2YTVH"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-HQKED2YTVH');
+</script>
+  
+
 404
