--- a/Html/SK-0A02/V-1.0/Index.html
+++ b/Html/SK-0A02/V-1.0/Index.html
@@ -36,6 +36,19 @@
 	<meta name="viewport" content="width=device-width, user-scalable=no">
 	<meta name="viewport" content="width=device-width,height=device-height,inital-scale=1.0,maximum-scale=1.0,user-scalable=no" />
 	<script src="https://samsonkiran02.github.io/Link/Coding/JS/Published/Fireworks.js"></script>
+
+  
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-6ZVE5T7QLL"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-6ZVE5T7QLL');
+</script>
+
+  
 	<!-- 
 <script src="https://samsonkiran02.github.io/Published/Js/SK-0A01/V-1.0/Script.js"></script>
  -->
