--- a/Html/SK-0A02/index.html
+++ b/Html/SK-0A02/index.html
@@ -1,1 +1,78 @@
-404
+<html>
+<head>
+<title>𝐒𝐚𝐦𝐬𝐨𝐧 𝐊𝐢𝐫𝐚𝐧 - 𝐀𝐠𝐞</title>
+	<!-- meta data -->
+	<meta name="title" content="𝐒𝐚𝐦𝐬𝐨𝐧 𝐊𝐢𝐫𝐚𝐧 - 𝐀𝐠𝐞" />
+	<meta name="description" content="Samson Kiran - Age.........." />
+	<meta name="keywords" content="samsonkiran02, sk02, samson kiran, samsonkiran02 blogspot, samsonkiran02 blogger, Samson Kiran Age" />
+	<meta name="author" content="Samson Kiran" />
+	<meta name="copyright" content="Samson Kiran" />
+	<meta name="robots" content="index, follow" />
+	<link rel="icon" href="https://samsonkiran02.github.io/Link/Images/PNG/Samson-Kiran.png" type="image/png" sizes="200x200" alt="samsonkiran02" />
+	<link rel="shortcut icon" href="https://samsonkiran02.github.io/Link/Images/ICO/Samson-Kiran.ico" type="image/x-icon" sizes="150x150" alt="samsonkiran02" />
+	<link rel="license" href="http://www.apache.org/licenses/LICENSE-2.0" />
+	<!-- Open Graph data -->
+	<meta property="og:locale" content="en_IN" />
+	<meta property="og:author" content="Samson Kiran" />
+	<meta property="og:site_name" content="samsonkiran02" />
+	<meta property="og:url" content="https://samsonkiran02.github.io" />
+	<meta property="og:type" content="website" />
+	<meta property="og:title" content="Samson Kiran - Age" />
+	<meta property="og:image" content="https://samsonkiran02.github.io/Link/Images/JPG/Samson-Kiran(2).jpg" />
+	<meta property="og:description" content="Samson Kiran - Age.........." />
+	<!-- Twitter Card data -->
+	<meta name="twitter:card" content="summary_large_image" />
+	<meta name="twitter:site" content="samsonkiran02" />
+	<meta name="twitter:title" content="Samson Kiran - Age" />
+	<meta name="twitter:description" content="Samson Kiran - Age.........." />
+	<meta name="twitter:image" content="https://samsonkiran02.github.io/Link/Images/JPG/Samson-Kiran(2).jpg" />
+	<meta name="twitter:locale" content="en_IN" />
+	<meta name="twitter:author" content="Samson Kiran" />
+	<meta name="twitter:type" content="website" />
+	<meta name="twitter:url" content="https://samsonkiran02.github.io" />
+	<!-- main data -->
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, user-scalable=no">
+	<meta name="viewport" content="width=device-width,height=device-height,inital-scale=1.0,maximum-scale=1.0,user-scalable=no" />
+	
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-HQKED2YTVH"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-HQKED2YTVH');
+</script>
+<style>
+html, body, iframe {
+     height: 100%;
+     width: 100%;
+     margin: 0;
+     padding: 0;
+     display: block;
+     background-color: black;
+     -webkit-user-select: none;
+     -webkit-touch-callout: none;
+     -moz-user-select: none;
+     -ms-user-select: none;
+     user-select: none;
+}
+
+iframe {
+     width: 100%;
+     height: 100%;
+     margin-top: 0px;
+     color: black;
+     background-color: black; 
+     border-size: 0px;
+     border-radius: 0px;
+     border-color: black;
+}
+</style>
+</head>
+<body>
+<iframe src="https://samsonkiran02.github.io/Published/Html/SK-0A02/V-1.0/Index.html" 
+height="100%" width="100%" frameborder="0px"></iframe>
+</body>
+</html>
