--- a/Html/SK-0A03/index.html
+++ b/Html/SK-0A03/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<meta charset="UTF-8">
+<meta charset="UTF-8">
 	<title>𝐇𝐚𝐩𝐩𝐲 𝐃𝐢𝐰𝐚𝐥𝐢</title>
 	<!-- meta data -->
 	<meta name="title" content="𝐇𝐚𝐩𝐩𝐲 𝐃𝐢𝐰𝐚𝐥𝐢" />
@@ -34,71 +34,44 @@
 	<!-- main data -->
 	<meta name="viewport" content="width=device-width, user-scalable=no">
 	<meta name="viewport" content="width=device-width,height=device-height,inital-scale=1.0,maximum-scale=1.0,user-scalable=no" />
-	<script src="https://samsonkiran02.github.io/Link/Coding/JS/Published/Fireworks.js"></script>
-	<!-- Global site tag (gtag.js) - Google Analytics -->
-	<script async src="https://www.googletagmanager.com/gtag/js?id=G-6ZVE5T7QLL"></script>
-	<script>
-		window.dataLayer = window.dataLayer || []; function gtag(){dataLayer.push(arguments);} gtag('js', new Date()); gtag('config', 'G-6ZVE5T7QLL');
-	</script>
-	<style>
-		@import url('https://fonts.googleapis.com/css2?family=Arbutus&display=swap');
-		 html,
-		body {
-			height: 100%;
-			margin: 0;
-			padding: 0;
-			background-image: url("https://samsonkiran02.github.io/Published/Html/SK-0A03/V-1.0/Src/moonlight.jpg");
-			background-color: black;
-			position: fixed;
-			-webkit-user-select: none;
-			-webkit-touch-callout: none;
-			-moz-user-select: none;
-			-ms-user-select: none;
-			user-select: none;
-		}
-		.cos {
-			font-size: 13px;
-			text-align: center;
-			color: whitesmoke;
-			position: fixed;
-			top: 0px;
-			margin: auto;
-			left: 0;
-			right: 0;
-		}
-		.hd {
-			font-family: 'Tourney', cursive;
-			color: #FEFCD7;
-			font-size: 55px;
-			text-shadow: #FEFCD7 0 0 30px, #FEFCD7 1px 0 1px;
-			position: fixed;
-			top: 30px;
-			margin: auto;
-			left: 0;
-			right: 0;
-		}
-		.by {
-			position: fixed;
-			bottom: 10px;
-			margin: auto;
-			right: 0px;
-			left: 0px;
-			text-align: center;
-			color: #FEFCD7;
-			font-size: 10px;
-			text-shadow: #FEFCD7 0 0 30px, #FEFCD7 1px 0 1px;
-		}
-	</style>
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-HQKED2YTVH"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-HQKED2YTVH');
+</script>
+<style>
+html, body, iframe {
+     height: 100%;
+     width: 100%;
+     margin: 0;
+     padding: 0;
+     display: block;
+     background-color: black;
+     -webkit-user-select: none;
+     -webkit-touch-callout: none;
+     -moz-user-select: none;
+     -ms-user-select: none;
+     user-select: none;
+}
+
+iframe {
+     width: 100%;
+     height: 100%;
+     margin-top: 0px;
+     color: black;
+     background-color: black; 
+     border-size: 0px;
+     border-radius: 0px;
+     border-color: black;
+}
+</style>
 </head>
 <body>
-	<center>
-		<p class="cos">click on screen</p>
-		<p class="hd">Happy Diwali</p>
-		<div class="Fireworks-01-sk-js_without_Firework">
-			<a href="#">
-				<p class="by">Power By: Samson Kiran</p>
-			</a>
-		</div>
-	</center>
+<iframe src="https://samsonkiran02.github.io/Published/Html/SK-0A03/V-1.0/Index.html" 
+height="100%" width="100%" frameborder="0px"></iframe>
 </body>
 </html>
