--- a/Html/SK-0A03/index.html
+++ b/Html/SK-0A03/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-<meta charset="UTF-8">
+	<meta charset="UTF-8">
 	<title>𝐇𝐚𝐩𝐩𝐲 𝐃𝐢𝐰𝐚𝐥𝐢</title>
 	<!-- meta data -->
 	<meta name="title" content="𝐇𝐚𝐩𝐩𝐲 𝐃𝐢𝐰𝐚𝐥𝐢" />
@@ -34,44 +35,45 @@
 	<!-- main data -->
 	<meta name="viewport" content="width=device-width, user-scalable=no">
 	<meta name="viewport" content="width=device-width,height=device-height,inital-scale=1.0,maximum-scale=1.0,user-scalable=no" />
-<!-- Global site tag (gtag.js) - Google Analytics -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-HQKED2YTVH"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
-
-  gtag('config', 'G-HQKED2YTVH');
-</script>
-<style>
-html, body, iframe {
-     height: 100%;
-     width: 100%;
-     margin: 0;
-     padding: 0;
-     display: block;
-     background-color: black;
-     -webkit-user-select: none;
-     -webkit-touch-callout: none;
-     -moz-user-select: none;
-     -ms-user-select: none;
-     user-select: none;
-}
-
-iframe {
-     width: 100%;
-     height: 100%;
-     margin-top: 0px;
-     color: black;
-     background-color: black; 
-     border-size: 0px;
-     border-radius: 0px;
-     border-color: black;
-}
-</style>
+	<!-- Global site tag (gtag.js) - Google Analytics -->
+	<script async src="https://www.googletagmanager.com/gtag/js?id=G-HQKED2YTVH"></script>
+	<script>
+		window.dataLayer = window.dataLayer || [];
+		  function gtag(){dataLayer.push(arguments);}
+		  gtag('js', new Date());
+		
+		  gtag('config', 'G-HQKED2YTVH');
+	</script>
+	<style>
+		html, body, iframe {
+		     height: 100%;
+		     width: 100%;
+		     margin: 0;
+		     padding: 0;
+		     display: block;
+		     background-color: black;
+		     -webkit-user-select: none;
+		     -webkit-touch-callout: none;
+		     -moz-user-select: none;
+		     -ms-user-select: none;
+		     user-select: none;
+		}
+		
+		iframe {
+		     width: 100%;
+		     height: 100%;
+		     margin-top: 0px;
+		     color: black;
+		     background-color: black; 
+		     border-size: 0px;
+		     border-radius: 0px;
+		     border-color: black;
+		}
+	</style>
 </head>
+
 <body>
-<iframe src="https://samsonkiran02.github.io/Published/Html/SK-0A03/V-1.0/Index.html" 
-height="100%" width="100%" frameborder="0px"></iframe>
+	<iframe src="https://samsonkiran02.github.io/Published/Html/SK-0A03/V-1.0/Index.html" height="100%" width="100%" frameborder="0px"></iframe>
 </body>
+
 </html>
